# Protocole-PolyLink

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: main.c  primitives.h
src/Test/: linked_list_test.c
src/communication/: envoie.c  recoit.c
src/config/: configIps.c  configIps.h
src/exemples/: exempleCOMPLET-PC1.c  exempleCOMPLET-PC2.c
src/init/: creePriseEmission.c  creePriseReception.c
src/protocole/: protocole.c  protocole.h
src/protocolesStructs/: protocolesStructs.c  protocolesStructs.h
src/util/: colors.h  polylink_socket.c  polylink_socket.h  receive.c  receive.h  send.c  send.h  utils.c  utils.h
src/util/list/: linked_list.c  linked_list.h
